--- a/index.html
+++ b/index.html
@@ -103,6 +103,7 @@ button:hover{
                 <input class="input" type="text" id="username" placeholder="User Name" ><br><br>
                 <input class="input" type="password" id="psw"  placeholder="Password" ><valid style="font-size: 15px;"></valid><br><br><br>
                 <button style="margin-left:35%" title="Submit" >Register</button><br><br>
+                <a href="storedisplay.html">Cookiesstoragedisplay</a>
             </form>
              </div>    
            </div> 
